# graphicsmath

./: .asdf.swp  .gitignore  COPYING  LICENSE  Makefile  Makefile.am  Makefile.in  README  ar-lib  bootstrap  config.h  config.h.in  config.status  configure  configure.ac  test.cpp  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
docs/: Doxyfile.in  Makefile.am  graphicsmath.pc.in
src/: Makefile  Makefile.am  Makefile.in  gm_exception.h  graphicsmath.h  mat2.cpp  mat2.h  mat3.cpp  mat3.h  mat4.cpp  mat4.h  quat.cpp  quat.h  test.cpp  vec2.cpp  vec2.h  vec2t.cpp  vec2t.h  vec2template.h  vec2template.tpp  vec3.cpp  vec3.h  vec3t.cpp  vec3t.h  vec4.cpp  vec4.h  vec4t.cpp  vec4t.h
src/tests/: mat4test.cpp  vec2test.cpp  vec3test.cpp  vec4test.cpp
tests/: Makefile  Makefile.am  Makefile.in  mat2test.cpp  mat3test.cpp  mat4test.cpp  quattest.cpp  tap.h  test.h  vec2test.cpp  vec3test.cpp  vec4test.cpp
