## Process this file with automake to produce Makefile.in
lib_LIBRARIES = libgraphicsmath-0.0.a

## Use a seperate line here so I don't have to retype that huge thing so many times down below
libgraphicsmath_0_0_a_SOURCES = vec2.cpp vec3.cpp vec4.cpp mat4.cpp
library_includedir = $(includedir)/graphicsmath0/
library_include_HEADERS = vec2.h vec3.h vec4.h
