## Process this file with automake to produce Makefile.in
lib_LIBRARIES = lib@libfilename@.a

lib@libfilename@_a_SOURCES = vec2.cpp vec3.cpp vec4.cpp mat2.cpp mat3.cpp mat4.cpp
library_includedir = $(includedir)/@libfilename@/
library_include_HEADERS = vec2.h vec3.h vec4.h mat2.h mat3.h mat4.h gm_exception.h graphicsmath.h
